test/bad/functions/type02.px

func f(x: String): Void def
    return

func g(x: String): Char def
    return 'g'

h = g
h = f
